<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FA9DBD"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UserHome">

    <Button
        android:id="@+id/button1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#E91E63"
        android:onClick="@string/button1"
        android:text="User Profile"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF5CCC"
        android:onClick="@string/button2"
        android:text="View Categories"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF5CCC"
        android:onClick="@string/button3"
        android:text="View Orders"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#E91E63"
        android:onClick="@string/button4"
        android:text="Seasonal Offers"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>